2003-01-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	New Windows menu contributed by John Bollinger <bbands@yahoo.com>:
	
	* src/win/wgnuplot.mnu: The new menu definition itself.

	* src/win/wmenu.c (MACROLEN): Increased to 10000 to accomodate
 	larger menu.

	* src/win/wresourc.h (NUMMENU): Increased to 512 to accomodate
 	larger menu.

	* src/win/wgnuplib.h (WGNUPLOTVERSION): Bumped up because NUMMENU
 	change makes DLL API incompatible.

2003-01-22  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* FAQ, src/syscfg.h: Update FAQ location.

	* configure.in: Fix faulty regexp in sed command and vgagl reporting.

2003-01-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/post.trm (ENHPS_recurse): Fix buggy PS output if backslash
 	is at the end of the input string.

2003-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pstricks.trm: Support for PM3D. Thanks to Tim Piessens for
	contribution.

2003-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/README src/color.c term/post.trm: Changed "continous" to
	"continuous".

2003-01-13  Hans Werner Strube  <strube@physik3.gwdg.de>

	* term/fig.trm: Fix text centering for nonzero text angle.

2003-01-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot3d.c (get_3ddata): Move dgrid3d call outside if-else
 	block to have it work with binary and matrix data, too.

2003-01-09  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Document Mike Kay's addition of font and
 	textcolor to tick label settings.

2003-01-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw config/makefile.cyg config/makefile.os2:
 	Sort terminals in the docs alphabetically, i.e. generate allterm.h
 	like in docs/Makefile.in.

2003-01-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* doc/gnuplot.doc: Remove duplication of hypertext labels "set
 	encoding" and "plotting styles".

2003-01-08  Petr Mikulik  <mikulik@physics.muni.cz>
