@@ -1,3 +1,14 @@
+2003-01-24  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/plot.c src/set.c docs/gnuplot.doc: Let the default terminal or
+	that (re)set from gnuplot's ini file pushed automatically during
+	gnuplot's startup. Consequently, 'set term pop' will be always defined
+	to be the default terminal on the given platform, unless changed
+	explicitly by 'set term push'.
+
+	* src/misc.h src/misc.c: New routines push_terminal() and
+	pop_terminal().
+
 2003-01-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	New Windows menu contributed by John Bollinger <bbands@yahoo.com>:
@@ -1755,7 +1766,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2003/01/23 13:22:04 $).
+	last modification date (from the tag $Date: 2003/01/24 08:26:43 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
